# agent_kg

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  README.md  handoff.md  pyproject.toml  release-notes.md  settings.json  settings.json.template
.claude/: settings.json
.claude/skills/agent-kg/: SKILL.md
.codekg/snapshots/: manifest.json
.dockg/snapshots/: manifest.json
.github/workflows/: publish.yml
.pycodekg/snapshots/: manifest.json
analysis/: agent_kg_analysis_20260404.md  agent_kg_analysis_20260405.md
assessments/: AgentKG_assessment_claude_sonnet_4_6_2026-04-04.md  AgentKG_assessment_claude_sonnet_4_6_2026-04-05.md  AssessmentProtocol_AgentKG.md
docs/: analysis_v0.4.0.md  cheatsheet.md
hooks/: agent_kg_precompact_hook.sh  agent_kg_stop_hook.sh  hooks_backup.json
src/agent_kg/: __init__.py  app.py  assemble.py  consolidate.py  graph.py  index.py  ingest.py  kg.py  onboard.py  profile.py  prune.py  query.py  schema.py  session.py  snapshots.py  store.py  summarize.py  user_profile.py  viz.py
src/agent_kg/cli/: __init__.py  main.py
src/agent_kg/hooks/: agent_kg_user_prompt_hook.sh
src/agent_kg/mcp/: __init__.py  server.py
src/agent_kg/nlp/: __init__.py  entities.py  intent.py  preferences.py  topics.py
tests/: __init__.py  test_consolidate.py  test_ingest.py  test_nlp.py  test_profile.py  test_schema.py  test_session.py  test_snapshots.py  test_store.py
