# agent_kg
[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "agent-kg"
version = "0.2.0"
description = "Conversational memory as a knowledge graph"
authors = ["Eric G. Suchanek, PhD <suchanek@mac.com>"]
license = "Elastic-2.0"
readme = "README.md"
packages = [{ include = "agent_kg", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
lancedb = ">=0.29.0"
numpy = ">=1.24.0"
sentence-transformers = "^5.2.0"
transformers = "^4.57.6"
safetensors = "^0.5.0"
torch = ">=2.5.1"
click = ">=8.1.0"
mcp = ">=1.0.0"
rich = "^14.0.0"
spacy = { version = ">=3.7.0"}
anthropic = { version = ">=0.25.0", optional = true }
httpx = { version = ">=0.27.0", optional = true }
pyvis = { version = ">=0.3.2", optional = true }
streamlit = { version = ">=1.35.0", optional = true }

code-kg = { git = "https://github.com/Flux-Frontiers/code_kg.git", optional=true}
doc-kg = { git = "https://github.com/Flux-Frontiers/doc_kg.git", optional=true}


[tool.poetry.extras]
nlp = ["spacy"]
llm = ["anthropic"]
local = ["httpx"]
viz = ["pyvis", "streamlit"]
kgrag = ["code-kg", "doc-kg"]
all = ["anthropic", "httpx", "pyvis", "streamlit", "code-kg", "doc-kg"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
ruff = ">=0.4.0"
mypy = ">=1.10.0"

[tool.poetry.scripts]
agent-kg          = "agent_kg.cli.main:cli"
agent-kg-init     = "agent_kg.cli.main:init"
agent-kg-install-hooks = "agent_kg.cli.main:install_hooks"
agent-kg-mcp      = "agent_kg.mcp.server:main"
agent-kg-ingest   = "agent_kg.cli.main:ingest"
agent-kg-query    = "agent_kg.cli.main:query"
agent-kg-assemble = "agent_kg.cli.main:assemble"
agent-kg-prune    = "agent_kg.cli.main:prune_cmd"
agent-kg-stats    = "agent_kg.cli.main:stats"
agent-kg-analyze  = "agent_kg.cli.main:analyze"
agent-kg-sessions = "agent_kg.cli.main:sessions"
agent-kg-snapshot = "agent_kg.cli.main:snapshot"
agent-kg-onboard  = "agent_kg.cli.main:onboard"
agent-kg-profile  = "agent_kg.cli.main:profile"
agent-kg-wipe     = "agent_kg.cli.main:wipe"
agent-kg-viz      = "agent_kg.cli.main:viz"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
mypy_path = "src"
explicit_package_bases = true

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
    # Optional runtime dependencies — not installed in the lint environment
    "E0401",  # import-error
    # Intentional lazy imports throughout (lancedb, spacy, anthropic, etc.)
    "C0415",  # import-outside-toplevel
    # Storage / domain classes with necessarily large APIs
    "R0902",  # too-many-instance-attributes
    "R0903",  # too-few-public-methods   (data container / config classes)
    "R0904",  # too-many-public-methods
    # Complex domain functions — refactoring would obscure the intent
    "R0912",  # too-many-branches
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "R0915",  # too-many-statements
    "R0917",  # too-many-positional-arguments
    # Duplicate fixture boilerplate across test files is intentional
    "R0801",  # duplicate-code
    # Standard pytest fixture pattern (fixture name shadows module-level name)
    "W0621",  # redefined-outer-name
    # pyarrow imported purely for availability check; ruff F401 handles unused imports
    "W0611",  # unused-import
    # Protected member access in CLI / migration utilities is acceptable
    "W0212",  # protected-access
    # Explicit `== []` comparisons are clearer in test assertions
    "C1803",  # use-implicit-booleaness-not-comparison
    # Classification functions with many early-return branches are intentional
    "R0911",  # too-many-return-statements
    # global-statement for lazy-loaded singleton (spaCy model cache)
    "W0603",  # global-statement
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.codekg]
# Directories to include in the knowledge graph build and analysis.
# When unset, all directories are indexed.
include = ["src"]
# Directories to exclude at every depth during the file walk.
# Combined with the built-in SKIP_DIRS (.git, .venv, __pycache__, etc.).
# exclude = ["tests", "benchmarks"]

[tool.dockg]
# Exclude directories from the knowledge graph by default.
exclude = ["bundles", "dist", "books"]

[tool.poe.tasks.docs]
help = "Generate project documentation and user guide PDFs"
sequence = [
  { shell = "cd src && pdoc --o ../docs --logo ./logo.png kgrag_kg" },
]

[tool.poe.tasks.wiki]
help = "Generate and publish GitHub wiki from docs/"
cmd = "python scripts/generate_wiki.py"

[tool.poe.tasks.wiki-preview]
help = "Preview wiki generation without publishing"
cmd = "python scripts/generate_wiki.py --dry-run"
